# atm_generative

./: .gitignore  README.md  clean_airline_2m.py  clean_data.py  clean_merge.py  download_avmet_simwx_data.py  flight_data_test.py  merged_data_test.py  noaa_weather_test.py  parser_test.py  pyproject.toml  reg_WeatherDelay.pkl  requirements.txt  response.json  schedule_data_test.py  schedule_test.py  test.py  viz.py  weather_metar_data_test.py  weather_noaa_data_test.py  weather_test.py
atm_data/: .gitignore
atm_data/data/schedule/lga_reduced_1995-2019_clean/csv/1995/: lga_reduced_1995_01_clean.csv  lga_reduced_1995_04_clean.csv  lga_reduced_1995_06_clean.csv  lga_reduced_1995_08_clean.csv  lga_reduced_1995_09_clean.csv  lga_reduced_1995_10_clean.csv
atm_data/data/schedule/lga_reduced_1995-2019_clean/csv/1996/: lga_reduced_1996_01_clean.csv  lga_reduced_1996_02_clean.csv  lga_reduced_1996_04_clean.csv  lga_reduced_1996_05_clean.csv  lga_reduced_1996_06_clean.csv  lga_reduced_1996_07_clean.csv  lga_reduced_1996_08_clean.csv  lga_reduced_1996_09_clean.csv  lga_reduced_1996_12_clean.csv
atm_data/data/schedule/lga_reduced_1995-2019_clean_yearly/parquet/: lga_reduced_1995_clean.parquet  lga_reduced_1996_clean.parquet  lga_reduced_1997_clean.parquet  lga_reduced_1998_clean.parquet  lga_reduced_1999_clean.parquet  lga_reduced_2000_clean.parquet  lga_reduced_2001_clean.parquet  lga_reduced_2002_clean.parquet  lga_reduced_2003_clean.parquet  lga_reduced_2004_clean.parquet  lga_reduced_2005_clean.parquet  lga_reduced_2006_clean.parquet  lga_reduced_2007_clean.parquet  lga_reduced_2008_clean.parquet  lga_reduced_2009_clean.parquet  lga_reduced_2010_clean.parquet  lga_reduced_2011_clean.parquet  lga_reduced_2012_clean.parquet  lga_reduced_2013_clean.parquet  lga_reduced_2014_clean.parquet  lga_reduced_2015_clean.parquet  lga_reduced_2016_clean.parquet  lga_reduced_2017_clean.parquet
atm_data/data/schedule/lga_reduced_2004-2019_clean_yearly/parquet/: lga_reduced_2009_clean.parquet  lga_reduced_2010_clean.parquet  lga_reduced_2011_clean.parquet  lga_reduced_2012_clean.parquet  lga_reduced_2013_clean.parquet  lga_reduced_2014_clean.parquet  lga_reduced_2015_clean.parquet  lga_reduced_2016_clean.parquet  lga_reduced_2017_clean.parquet
atm_data/data/schedule/lga_reduced_2010-2019_clean_yearly/parquet/: lga_reduced_2010_clean.parquet  lga_reduced_2011_clean.parquet  lga_reduced_2012_clean.parquet  lga_reduced_2013_clean.parquet  lga_reduced_2014_clean.parquet  lga_reduced_2015_clean.parquet  lga_reduced_2016_clean.parquet  lga_reduced_2017_clean.parquet
atm_data/data_utils/: flight_data.py  schedule_data.py  tz_utils.py  weather_metar_data.py  weather_noaa_data.py
atm_data/data_utils/noaa_lut/: ghcnh-station-list.csv  lcdv2-station-list.csv
atm_data/data_utils/schedule_lut/: L_AIRPORT_IATA.csv  L_AIRPORT_ID_IATA_ICAO.csv
atm_data/initial_analysis/: merged_data_test.py
atm_data/notebooks/: lga_analysis.ipynb  lga_plotting_eda.ipynb  processed_ceiling.csv  processed_visibility.csv  w_processed_ceiling.csv  w_processed_ceiling.parquet  w_processed_visibility.csv  w_processed_visibility.parquet  x_capacity_counts.csv  x_capacity_counts.parquet  x_flight_counts.csv  x_flight_counts.parquet  y_arrival_delays.csv  y_arrival_delays.parquet  y_departure_delays.csv  y_departure_delays.parquet  y_event_delays.csv  y_event_delays.parquet
atm_data/notebooks/paper_plots/: capacity_bubble3d.eps  ceiling_delays_scatter2d.eps  split_high_bubble2d.eps  split_low_bubble2d.eps  visibility_delays_bubble2d.eps  visibility_delays_scatter2d.eps
atm_data/scripts/: download_avmet_simwx_data.py  flight_data_test.py  schedule_data_test.py  weather_metar_data_test.py  weather_noaa_data_test.py
data/schedule/: lax_to_jfk_cleaned.csv
data_utils/: flight_data.py  schedule_data.py  weather_data.py  weather_metar_data.py  weather_noaa_data.py
data_utils/noaa_lut/: ghcnh-station-list.txt  lcdv2-station-list.txt
data_utils/schedule_lut/: L_AIRPORT_ID_IATA.csv
initial_analysis/: reg_NASDelay.pkl
scripts/: flight_data_test.py  schedule_data_test.py  weather_metar_data_test.py  weather_noaa_data_test.py
(+38763 files in other folders)
