[tool.poetry]
name = "atm-data"
version = "0.1.0"
description = ""
authors = ["Joseph Zhang <jzha@mit.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
tqdl = "0.0.4"
pandas = "2.1.3"
numpy = "1.24.2"
affine = "2.4.0"
aiohappyeyeballs = "2.4.3"
aiohttp = "3.10.8"
aiosignal = "1.3.1"
airportsdata = "20241001"
annotated-types = "0.5.0"
anyio = "4.0.0"
asttokens = "2.4.1"
async-generator = "1.10"
async-timeout = "4.0.3"
attrs = "22.1.0"
backoff = "2.2.1"
bcrypt = "4.2.0"
beautifulsoup4 = "4.12.2"
boto3 = "1.35.32"
botocore = "1.35.32"
brotli = "1.0.9"
certifi = "2022.12.7"
cffi = "1.17.1"
charset-normalizer = "3.2.0"
click = "8.1.3"
click-plugins = "1.1.1"
cligj = "0.7.2"
cloudpickle = "3.0.0"
coiled = "1.53.0"
comm = "0.2.2"
contextily = "1.6.2"
contourpy = "1.0.7"
cryptography = "43.0.1"
cycler = "0.11.0"
dacite = "1.8.1"
dash = "2.18.1"
dash-core-components = "2.0.0"
dash-html-components = "2.0.0"
dash-table = "5.0.0"
dask = "2024.9.1"
dask-expr = "1.1.15"
decorator = "5.1.1"
deprecated = "1.2.14"
distributed = "2024.9.1"
earthpy = "0.9.4"
exceptiongroup = "1.1.0"
executing = "2.1.0"
fabric = "3.2.2"
fastapi = "0.103.0"
filelock = "3.13.1"
flask = "2.2.2"
fonttools = "4.39.3"
frozenlist = "1.4.1"
fsspec = "2023.10.0"
geodatasets = "2024.8.0"
geographiclib = "2.0"
geopandas = "1.0.1"
geopy = "2.4.1"
gilknocker = "0.4.1"
h11 = "0.14.0"
h2 = "4.1.0"
h3 = "4.1.2"
hpack = "4.0.0"
httpcore = "1.0.6"
httpx = "0.27.2"
hyperframe = "6.0.1"
idna = "3.4"
imageio = "2.35.1"
importlib-metadata = "8.5.0"
iniconfig = "1.1.1"
invoke = "2.2.0"
ipython = "8.28.0"
ipywidgets = "8.1.5"
itsdangerous = "2.1.2"
jaconv = "0.3.4"
jedi = "0.19.1"
jinja2 = "3.1.2"
jmespath = "1.0.1"
joblib = "1.2.0"
jsondiff = "2.2.1"
jupyterlab-widgets = "3.0.13"
kiwisolver = "1.4.4"
lazy-loader = "0.4"
locket = "1.0.0"
markdown-it-py = "3.0.0"
markupsafe = "2.1.2"
matplotlib = "3.4.3"
matplotlib-inline = "0.1.7"
mdurl = "0.1.2"
mercantile = "1.2.1"
mpmath = "1.3.0"
msgpack = "1.1.0"
multidict = "6.1.0"
mutagen = "1.46.0"
nest-asyncio = "1.6.0"
networkx = "3.2.1"
outcome = "1.2.0"
packaging = "24.1"
paramiko = "3.5.0"
parso = "0.8.4"
partd = "1.4.2"
pexpect = "4.9.0"
pillow = "9.2.0"
pip-requirements-parser = "32.0.1"
platformdirs = "3.10.0"
plotly = "5.24.1"
pluggy = "1.0.0"
pooch = "1.8.2"
prometheus-client = "0.21.0"
prompt-toolkit = "3.0.48"
proplot = "0.9.7"
psutil = "6.0.0"
ptyprocess = "0.7.0"
pure-eval = "0.2.3"
py = "1.11.0"
pyairports = "2.1.1"
pyarrow = "17.0.0"
pycparser = "2.22"
pycryptodomex = "3.18.0"
pydantic = "2.3.0"
pydantic-core = "2.6.3"
pygame = "2.4.0"
pygments = "2.16.1"
pykakasi = "2.2.1"
pynacl = "1.5.0"
pyogrio = "0.10.0"
pyparsing = "3.0.9"
pyproj = "3.7.0"
pysocks = "1.7.1"
pytest = "7.1.3"
python-dateutil = "2.8.2"
python-osc = "1.8.1"
python-slugify = "8.0.1"
pytube = "15.0.0"
pytz = "2024.2"
pyyaml = "6.0.2"
rapidfuzz = "2.15.1"
rasterio = "1.4.1"
redis = "5.0.0"
requests = "2.31.0"
retrying = "1.3.4"
rich = "13.5.2"
rioxarray = "0.17.0"
s3transfer = "0.10.2"
scikit-image = "0.24.0"
scikit-learn = "1.2.1"
scipy = "1.10.0"
selenium = "4.8.0"
shapely = "2.0.6"
six = "1.16.0"
sniffio = "1.3.0"
sortedcontainers = "2.4.0"
soundcloud-v2 = "1.3.1"
soupsieve = "2.4.1"
spotdl = "4.2.1"
spotipy = "2.23.0"
stack-data = "0.6.3"
starlette = "0.27.0"
sympy = "1.12"
syncedlyrics = "0.5.0"
tblib = "3.0.0"
tenacity = "9.0.0"
text-unidecode = "1.3"
threadpoolctl = "3.1.0"
tifffile = "2024.9.20"
timezonefinder = "6.5.4"
toml = "0.10.2"
tomli = "2.0.1"
toolz = "0.12.1"
torch = "2.1.1"
tornado = "6.4.1"
tqdm = "4.66.1"
traces = "0.6.4"
traitlets = "5.14.3"
trio = "0.22.0"
trio-websocket = "0.9.2"
typing = "3.7.4.3"
typing-extensions = "4.7.1"
tzdata = "2023.3"
unidecode = "1.3.6"
urllib3 = "1.26.14"
uvicorn = "0.23.2"
wcwidth = "0.2.13"
websockets = "11.0.3"
werkzeug = "2.2.2"
widgetsnbextension = "4.0.13"
wrapt = "1.15.0"
wsproto = "1.2.0"
xarray = "2024.9.0"
xyzservices = "2024.9.0"
yarl = "1.13.1"
yt-dlp = "2023.7.6"
ytmusicapi = "1.2.1"
zict = "3.0.0"
zipp = "3.20.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
